[tool.poetry]
name = "imz-engineer"
version = "0.1.0"
description = ""
authors = ["kevin <noemail@gamil.com>"]
readme = "README.md"
packages = [{include = "imz_engineer"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.88.0"}
pre-commit = "^2.20.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
